fix: rendered field spacing in columns
resolves #132

--- a/src/sass/base/_bs.scss
+++ b/src/sass/base/_bs.scss
@@ -11,14 +11,19 @@ hr {
 
 .f-field-group {
   flex-wrap: wrap;
+  margin-bottom: $base-space + $half-space;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   label + .badge {
-    margin-left: 10px;
+    margin-left: $base-space;
   }
 
   > label {
     display: inline-block;
-    margin-bottom: 10px;
+    margin-bottom: $half-space;
   }
 
   button {
